--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-openai = "0.10.3"
 serde = "1.0.160"
 serde_json = "1.0.96"
+tiktoken-rs = "0.4.1"
 tokio = { version = "1.27.0", features = ["full"] }
 [dependencies.uuid]
 version = "1.3.1"
