--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-openai = "0.10.3"
+futures = "0.3.28"
 serde = "1.0.160"
 serde_json = "1.0.96"
 tiktoken-rs = "0.4.1"
